--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,6 @@ title: "Saud's Swift Blog"
 description: "Exploring the leaps and bounds of iOs world"
 baseurl: "/blog" # the subpath of your site, e.g. "/blog"
 #url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-logo: "/images/so-simple-site-logo.png" # path of site logo, e.g. "/assets/images/logo.png"
 #date_format: "%B %-d, %Y"
 read_time: true
 words_per_minute: 200
@@ -103,29 +102,29 @@ defaults:
 
 # Site Author
 author:
-  name: Michael Rose
-  picture: /images/michael-rose-photo.jpg
-  email:
-  twitter: mmistakes
+  name: Saqib Saud
+  picture: assets/images/Saqib_Saud.JPG
+  email: me@saqibsaud.com
+  twitter: wisesabre
   links:
     - title: Twitter
-      url: https://twitter.com/mmistakes
+      url: https://twitter.com/wisesabre
       icon: fab fa-twitter-square
-    - title: Instagram
-      url: https://instagram.com/mmistakes
-      icon: fab fa-instagram
+    - title: LinkedIn
+      url: https://www.linkedin.com/in/saqibsaud/
+      icon: fab fa-linkedin
     - title: GitHub
-      url: https://github.com/mmistakes
+      url: https://github.com/saqib-saud
       icon: fab fa-github-square
 
 # Footer Links
 footer_links:
-  - title: Twitter
-    url: https://twitter.com/wisesabre
-    icon: fab fa-twitter-square
-  - title: GitHub
-    url: https://github.com/saqib-saud
-    icon: fab fa-github-square
-  - title: Feed
-    url: atom.xml
-    icon: fas fa-rss-square
+    - title: Twitter
+      url: https://twitter.com/wisesabre
+      icon: fab fa-twitter-square
+    - title: LinkedIn
+      url: https://www.linkedin.com/in/saqibsaud/
+      icon: fab fa-linkedin
+    - title: GitHub
+      url: https://github.com/saqib-saud
+      icon: fab fa-github-square
