--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,4 @@
-- title: Posts
-  url: /posts/
-- title: Categories
-  url: /categories/
-- title: External Page
-  url: https://whatever-site.com/page.html
+- title: Tags
+  url: /tags/
 - title: Search
   url: /search/
