--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ skin: "/assets/css/skins/dark.css"
 locale: en-US
 title: "Saud's Swift Blog"
 description: "Exploring the leaps and bounds of iOs world"
-baseurl: "/blog" # the subpath of your site, e.g. "/blog"
-#url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#baseurl: "/blog" # the subpath of your site, e.g. "/blog"
+url: https://www.saqibsaud.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 #date_format: "%B %-d, %Y"
 read_time: true
 words_per_minute: 200
